syntax = "proto3";

package metastorepb;

import "gogoproto/gogo.proto";

service MetastoreService {
  rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
}

message AddBlockRequest {
  BlockMeta block = 1;
}

message AddBlockResponse {}

message BlockMeta {
  uint64 format_version = 1;
  string id = 2;
  int64 min_time = 3;
  int64 max_time = 4;
  uint32 compaction_level = 6;
  DataRef indexRef = 7 [(gogoproto.nullable) = false];

  repeated TenantStreams tenant_streams = 8;
}

message DataRef {
  int64 offset = 1;
  int64 length = 2;
}

// TenantStreams object points to the offset in the block at which
// the tenant streams data is located.
message TenantStreams {
  string tenant_id = 1;
  int64 min_time = 3;
  int64 max_time = 4;
  //todo offset in the block.
}
